# secondhand-apartment-price-forecasting

./: .gitignore  Dockerfile  README.md  SWEETVIZ_REPORT.html  check.py  concat_train.py  config.yml  make_report.py  pyproject.toml  requirements.txt  setup.sh  train.py
features/: __init__.py  base.py  embedding.py  encoding.py  groupby.py  timeseries.py
models/: model.py  trainer.py
utils/: __init__.py  data.py  preprocess.py  utils.py
