[tool.poetry]
name = "secondhand-apartment-price-forecasting"
version = "0.1.0"
description = ""
authors = ["navitacion <masataka.i.navi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mojimoji = "^0.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
